syntax = "proto3";

package table;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option java_package = "io.toxa108.pokerito.tableservice.proto";
option java_multiple_files = true;

service TableService {
    rpc AddUserToTable (AddUserToTableRequest) returns (google.protobuf.Empty);
}

message TableResponse {
    string id = 1;
    string name = 2;
    repeated string usersId = 3;
}

message AddUserToTableRequest {
    string tableId = 1;
    string userId = 2;
}

